<resources>
    <string name="app_name">SyCryptr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recent">Recent</string>
    <string name="menu_social">Social Media</string>
    <string name="menu_website">Website</string>
    <string name="menu_cards">Cards</string>
    <string name="menu_device">Devices</string>
    <string name="menu_other">Other</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_social">Social</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="password_dont_match">Password don\'t match !</string>
    <string name="password_is_too_short">Password is too Short!</string>

    <string name="about">SyCryptr is an offline password manager which allows you to save your usernames and passwords</string>
    <string name="conditions">Installation and usage of the software is at users own risk.The user is responsible for any possible data loss.</string>
    <string name="privacypolicy">Malith Ileperuma developed and published this software. This software does not collect , use or share any personal information of you or your stored data</string>
</resources>
