<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bike_img" />

    </FrameLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@null"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:fontFamily="@font/regular"
            android:textColor="@color/white"
            android:src="@drawable/ic_back"/>


    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="10dp"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="About Us"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="30dp"
                    android:fontFamily="@font/regular"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="About SyCryptr"
                    android:textStyle="bold"
                    android:textColor="@color/accent"
                    android:textSize="15dp"
                    android:fontFamily="@font/regular"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:fontFamily="@font/regular"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Terms &amp; Conditions"
                    android:textStyle="bold"
                    android:textColor="@color/accent"
                    android:textSize="15dp"
                    android:fontFamily="@font/regular"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conditions"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:fontFamily="@font/regular"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Privacy Policy"
                    android:textStyle="bold"
                    android:textColor="@color/accent"
                    android:textSize="15dp"
                    android:fontFamily="@font/regular"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacypolicy"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:fontFamily="@font/regular"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Connect with Us"
                    android:textStyle="bold"
                    android:textColor="@color/accent"
                    android:textSize="15dp"
                    android:fontFamily="@font/regular"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="5dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/share"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="   Share"
                    android:background="@drawable/button_color_state"
                    android:fontFamily="@font/regular"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_share"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_marginLeft="15dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="   Contact Us"
                    android:background="@drawable/button_color_state"
                    android:fontFamily="@font/regular"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_mail"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_marginLeft="15dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/visitpage"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="   Visit our Page"
                    android:background="@drawable/button_color_state"
                    android:fontFamily="@font/regular"
                    android:gravity="left|center_vertical"
                    android:drawableLeft="@drawable/ic_link"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_marginLeft="15dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/githubfork"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="   Fork us on Github"
                    android:drawableLeft="@drawable/ic_link"
                    android:background="@drawable/button_color_state"
                    android:fontFamily="@font/regular"
                    android:gravity="left|center_vertical"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>





</RelativeLayout>